# Solana

assets/: ft.json  nft.json
week1/: package.json  private_key.json  tsconfig.json
week1/src/assignment/: keypair.ts
week1/src/lib/: helpers.ts
week1/src/scripts/: 1.simpleTransaction.ts  2.complexTransaction.ts  assignment1.ts  simpleTransaction.ts
week2/: .prettierrc  package-lock.json  package.json
week2/src/assignment/: assignment2.ts
week2/src/lib/: helpers.ts  vars.ts
week2/src/scripts/: 1.createTokenWithMetadata.ts  2.mintTokens.ts  3.updateMetadata.ts  4.createNFTs.ts
week3/: README.md
week3/code/: Anchor.toml  Cargo.toml  package-lock.json  package.json
week3/code/app/: package-lock.json  package.json
week4/code/: Anchor.toml  Cargo.toml  package-lock.json  package.json
week4/code/tests/: stake-program.ts
week5/code/: Anchor.toml  anchor-build.sh  package-lock.json  package.json
week5/code/programs/amm/: Cargo.toml
week5/code/programs/amm/src/: errors.rs  lib.rs  state.rs  utils.rs
week5/code/programs/amm/src/instructions/: create_amm.rs  create_pool.rs  deposit_liquidity.rs  mod.rs  swap.rs  withdraw_liquidity.rs
week5/code/tests/: create-amm.ts  create-pool.ts  deposit-liquidity.ts  swap.ts  withdraw_liquidity.ts
week6/: .gitignore  package-lock.json  package.json
week6/.nx/cache/: file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  run.json
week6/anchor/: .gitignore  package.json
week6/anchor/src/: counter-exports.ts
week6/web/: .gitignore
week6/web/app/: layout.tsx
(+23 files in other folders)
